samples/_failures_safe/1761464027_2e3efc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_38958121.c: In function ‘main’:
./samples/SAFE/__tmp_38958121.c:142:9: error: expected expression at end of input
  142 |         if (!add_edge(graph, from, to,
      |         ^~
./samples/SAFE/__tmp_38958121.c:142:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_38958121.c:142:9: error: expected declaration or statement at end of input
